[package]
name = "cosmetic_communist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.1", features = ["macros", "rt-multi-thread"] }
serenity = "0.12"
poise = { version = "0.6.1" }
